# sentrypad

./: CMakeLists.txt
cmake/: CFlagOverrides.cmake  CXXFlagOverrides.cmake  FindCrashpad.cmake
include/: sentry.h
src/: crashpad_backend.cpp  internal.hpp  macros.hpp  sentry.cpp
